// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builtins work as expected $# 1`] = `
Object {
  "alertResult": undefined,
  "code": "display('message');",
  "displayResult": "\\"message\\"",
  "result": "message",
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 2`] = `
Object {
  "alertResult": undefined,
  "code": "is_undefined(undefined);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 3`] = `
Object {
  "alertResult": undefined,
  "code": "is_undefined(null);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 4`] = `
Object {
  "alertResult": undefined,
  "code": "is_null(undefined);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 5`] = `
Object {
  "alertResult": undefined,
  "code": "is_null(null);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 6`] = `
Object {
  "alertResult": undefined,
  "code": "is_string('string');",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 7`] = `
Object {
  "alertResult": undefined,
  "code": "is_string('true');",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 8`] = `
Object {
  "alertResult": undefined,
  "code": "is_string('1');",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 9`] = `
Object {
  "alertResult": undefined,
  "code": "is_string(true);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 10`] = `
Object {
  "alertResult": undefined,
  "code": "is_string(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 11`] = `
Object {
  "alertResult": undefined,
  "code": "is_number('string');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 12`] = `
Object {
  "alertResult": undefined,
  "code": "is_number('true');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 13`] = `
Object {
  "alertResult": undefined,
  "code": "is_number('1');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 14`] = `
Object {
  "alertResult": undefined,
  "code": "is_number(true);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 15`] = `
Object {
  "alertResult": undefined,
  "code": "is_number(1);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 16`] = `
Object {
  "alertResult": undefined,
  "code": "is_boolean('string');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 17`] = `
Object {
  "alertResult": undefined,
  "code": "is_boolean('true');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 18`] = `
Object {
  "alertResult": undefined,
  "code": "is_boolean('1');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 19`] = `
Object {
  "alertResult": undefined,
  "code": "is_boolean(true);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 20`] = `
Object {
  "alertResult": undefined,
  "code": "is_boolean(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 21`] = `
Object {
  "alertResult": undefined,
  "code": "is_function(display);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 22`] = `
Object {
  "alertResult": undefined,
  "code": "is_function(x => x);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 23`] = `
Object {
  "alertResult": undefined,
  "code": "function f(x) {
  return x;
}
is_function(f);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 24`] = `
Object {
  "alertResult": undefined,
  "code": "is_function(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 25`] = `
Object {
  "alertResult": undefined,
  "code": "is_array(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 26`] = `
Object {
  "alertResult": undefined,
  "code": "is_array(pair(1, 2));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 27`] = `
Object {
  "alertResult": undefined,
  "code": "is_array([1]);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 28`] = `
Object {
  "alertResult": undefined,
  "code": "is_object(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 29`] = `
Object {
  "alertResult": undefined,
  "code": "is_object(pair(1, 2));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 30`] = `
Object {
  "alertResult": undefined,
  "code": "is_object([1]);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 31`] = `
Object {
  "alertResult": undefined,
  "code": "is_object({});",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 32`] = `
Object {
  "alertResult": undefined,
  "code": "is_object({a: 1});",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 33`] = `
Object {
  "alertResult": undefined,
  "code": "is_object(x => x);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 34`] = `
Object {
  "alertResult": undefined,
  "code": "is_object(display);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 35`] = `
Object {
  "alertResult": undefined,
  "code": "is_object(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 36`] = `
Object {
  "alertResult": undefined,
  "code": "is_object('string');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 37`] = `
Object {
  "alertResult": undefined,
  "code": "is_object(true);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 38`] = `
Object {
  "alertResult": undefined,
  "code": "is_NaN(1 / 0);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 39`] = `
Object {
  "alertResult": undefined,
  "code": "is_NaN(NaN);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 40`] = `
Object {
  "alertResult": undefined,
  "code": "is_NaN(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 41`] = `
Object {
  "alertResult": undefined,
  "code": "is_NaN(x => x);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 42`] = `
Object {
  "alertResult": undefined,
  "code": "has_own_property({a: 1, b: 2}, 'a');",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 43`] = `
Object {
  "alertResult": undefined,
  "code": "has_own_property({a: 1, b: 2}, 'c');",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 44`] = `
Object {
  "alertResult": undefined,
  "code": "array_length([1]);",
  "displayResult": undefined,
  "result": 1,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 45`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('10', 10);",
  "displayResult": undefined,
  "result": 10,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 46`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int('10', 2);",
  "displayResult": undefined,
  "result": 2,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 47`] = `
Object {
  "alertResult": undefined,
  "code": "is_number(runtime());",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 48`] = `
Object {
  "alertResult": undefined,
  "code": "const x = runtime();
const f = x => x === 0 ? x : f(x-1);
f(1000);
const y = runtime();
x !== y;",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 49`] = `
Object {
  "alertResult": undefined,
  "code": "pair(1, 2);",
  "displayResult": undefined,
  "result": Array [
    1,
    2,
  ],
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 50`] = `
Object {
  "alertResult": undefined,
  "code": "list(1, 2);",
  "displayResult": undefined,
  "result": Array [
    1,
    Array [
      2,
      null,
    ],
  ],
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 51`] = `
Object {
  "alertResult": undefined,
  "code": "is_list(1);",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 52`] = `
Object {
  "alertResult": undefined,
  "code": "is_list(pair(1, 2));",
  "displayResult": undefined,
  "result": false,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 53`] = `
Object {
  "alertResult": undefined,
  "code": "is_list(list(1, 2));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 54`] = `
Object {
  "alertResult": undefined,
  "code": "head(pair(1, 2));",
  "displayResult": undefined,
  "result": 1,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 55`] = `
Object {
  "alertResult": undefined,
  "code": "tail(pair(1, 2));",
  "displayResult": undefined,
  "result": 2,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $# 56`] = `
Object {
  "alertResult": undefined,
  "code": "length(list(1, 2));",
  "displayResult": undefined,
  "result": 2,
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $#: fails 1`] = `
Object {
  "alertResult": undefined,
  "code": "error('error!');",
  "displayResult": undefined,
  "error": "Line 1: Error: \\"error!\\"",
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $#: fails 2`] = `
Object {
  "alertResult": undefined,
  "code": "head(null);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered null",
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $#: fails 3`] = `
Object {
  "alertResult": undefined,
  "code": "tail(null);",
  "displayResult": undefined,
  "error": "Line 1: Error: tail(xs) expects a pair as argument xs, but encountered null",
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $#: fails 4`] = `
Object {
  "alertResult": undefined,
  "code": "head(1);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered 1",
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $#: fails 5`] = `
Object {
  "alertResult": undefined,
  "code": "tail(1);",
  "displayResult": undefined,
  "error": "Line 1: Error: tail(xs) expects a pair as argument xs, but encountered 1",
  "visualiseListResult": undefined,
}
`;

exports[`Builtins work as expected $#: fails 6`] = `
Object {
  "alertResult": undefined,
  "code": "length(1);",
  "displayResult": undefined,
  "error": "Line 1: Error: tail(xs) expects a pair as argument xs, but encountered 1",
  "visualiseListResult": undefined,
}
`;
